@@ -316,4 +316,5 @@ Up to 2009-01-02 (since 1.7.5 release) Denton Woods <doomwiz@users.sf.net>
 	* devil_internal_exports.h: Commented members of ILimage struct using Doxygen-style comments.
 	  Removed deprecated, commented-out members (NumNext, NumLayers, NumMips).
 	* Updated several functions with appropriate Doxygen comments.
+	* il.h: Updated IL_XXX file format defines with Doxygen comments.
 	
